# interactive_viz

./: .gitignore  README.md  index.html  pyproject.toml
css/: style.css  styles.css
data/clean/: country_migration_totals.csv
data/raw/: country_codes.csv  migration_percentage_destination.csv
js/: autocomplete.js  chor_map.js  line.js  main.js  scroll.js  spots_map.js  top5.js  updates.js
milestones/: interactive_draft.md  mileston1.md
milestones/milestone1/: mileston1.md
src/: data_cleaner.py
